--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,10 @@ python:
 install:
   - pip install -r dev-requirements.txt
   - pip install -U .
+  # TODO: Deserializing relationships correctly currently depends on
+  # the developement version of marshmallow. Remove this once
+  # marshmallow 2.0.0b4 is released
+  - pip install git+git://github.com/marshmallow-code/marshmallow.git@dev
 
 before_script:
   - flake8 .
