--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ python:
 install:
   - travis_retry pip install -U .
   - travis_retry pip install -r dev-requirements.txt
+  # Install lowest supported sqlalchemy version
+  - travis_retry pip install sqlalchemy==0.9.7
   - travis_retry pip install -U marshmallow"$MARSHMALLOW_VERSION"
 before_script:
   - flake8 .
