Resetting min version back to 0.9.7

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
   - travis_retry pip install -U .
   - travis_retry pip install -r dev-requirements.txt
   # Install lowest supported sqlalchemy version
-  - travis_retry pip install sqlalchemy==1.1.0b3
+  - travis_retry pip install sqlalchemy==0.9.7
   - travis_retry pip install -U marshmallow"$MARSHMALLOW_VERSION"
 before_script:
   - flake8 .
