--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ install:
   - travis_retry pip install -r dev-requirements.txt
   # Install lowest supported sqlalchemy version
   - travis_retry pip install sqlalchemy==0.9.7
-  - travis_retry pip install -U marshmallow"$MARSHMALLOW_VERSION"
+  - travis_retry pip install -U marshmallow"$MARSHMALLOW_VERSION" --pre
 before_script:
   - flake8 .
 
