--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@
 
 # Containerized builds
 sudo: false
+cache: pip
 
 language: python
 
@@ -26,13 +27,23 @@ install:
 before_script:
   - flake8 .
 
-script: py.test
+script: pytest
 
-deploy:
-  provider: pypi
-  user: sloria
-  on:
-    tags: true
-  distributions: sdist bdist_wheel
-  password:
-    secure: ADzISZrLbLwb665Ax5ob7srcjI2t6rqEhhiLNxLvqNtuDSCFZOXoevpKX2Omha0HWuPDAOWbNq2rkY7BpfXArYmNQ+k0ZlvGzkrqYAG8EiwlzWcOH5BMZHI8MiQxslCu1c1H9MC5HHqOiEekpc4CNl7viNkxmzF36ZiU77y+JKM=
+jobs:
+  include:
+  - stage: PyPI Release
+    if: tag IS present
+    python: "3.6"
+    env: []
+    install: true
+    before_script: true
+    script: echo "Releasing to PyPI..."
+    after_success: true
+    deploy:
+      provider: pypi
+      user: sloria
+      on:
+        tags: true
+      distributions: sdist bdist_wheel
+      password:
+        secure: ADzISZrLbLwb665Ax5ob7srcjI2t6rqEhhiLNxLvqNtuDSCFZOXoevpKX2Omha0HWuPDAOWbNq2rkY7BpfXArYmNQ+k0ZlvGzkrqYAG8EiwlzWcOH5BMZHI8MiQxslCu1c1H9MC5HHqOiEekpc4CNl7viNkxmzF36ZiU77y+JKM=
