Fix flake issues

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,8 @@ universal=1
 # E128: continuation line under-indented for visual indent
 # E265: block comment should start with #
 # E302: expected 2 blank lines, found 0
+# W504: line break after binary operator
 [flake8]
-ignore = E127,E128,E265,E302
+ignore = E127,E128,E265,E302,W504
 max-line-length = 100
-exclude=.tox,.git,docs,tests,env,venv,.ropeproject
+exclude=.tox,.git,docs,tests,build,env,venv,.ropeproject
