--- a/.travis.yml
+++ b/.travis.yml
@@ -1,40 +1,33 @@
-# Config file for automatic testing at travis-ci.org
-
-# Containerized builds
+language: python
 sudo: false
 cache: pip
-
-language: python
-
-env:
-  # Lowest supported version
-  - MARSHMALLOW_VERSION="==2.0.0"
-  # Latest release
-  - MARSHMALLOW_VERSION=""
-
-python:
-  - "3.6"
-  - "3.5"
-  - "2.7"
-  - "pypy"
-
-install:
-  - travis_retry pip install -r dev-requirements.txt
-  # Install lowest supported sqlalchemy version
-  - travis_retry pip install sqlalchemy==0.9.7
-  - travis_retry pip install -U marshmallow"$MARSHMALLOW_VERSION" --pre
-script: invoke test
-
+install: travis_retry pip install -U tox
+script: tox
 jobs:
+  fast_finish: true
   include:
+  - { python: '3.6', env: TOXENV=lint }
+
+  - { python: '2.7', env: TOXENV=py27-marshmallow2 }
+  - { python: '2.7', env: TOXENV=py27-marshmallow3 }
+
+  - { python: '3.5', env: TOXENV=py35-marshmallow2 }
+  - { python: '3.5', env: TOXENV=py35-marshmallow3 }
+
+  - { python: '3.6', env: TOXENV=py36-marshmallow2 }
+  - { python: '3.6', env: TOXENV=py36-marshmallow3 }
+
+  - { python: '3.7', env: TOXENV=py37-marshmallow2, dist: xenial, sudo: required }
+  - { python: '3.7', env: TOXENV=py37-marshmallow3, dist: xenial, sudo: required }
+
+  - { python: '3.6', env: TOXENV=docs }
+
   - stage: PyPI Release
     if: tag IS present
     python: "3.6"
     env: []
-    install: true
-    before_script: true
-    script: echo "Releasing to PyPI..."
-    after_success: true
+    install: skip
+    script: skip
     deploy:
       provider: pypi
       user: sloria
