--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,5 @@
 marshmallow>=2.0.0b4
 SQLAlchemy>=0.7
 sphinx==1.8.1
-git+https://github.com/sloria/alabaster.git@sloria
+alabaster==0.7.12
 sphinx-issues==1.1.0
