--- a/tox.ini
+++ b/tox.ini
@@ -7,8 +7,8 @@ envlist=
 [testenv]
 extras = tests
 deps =
-    marshmallow2: marshmallow>=2.0.0,<3.0.0
-    marshmallow3: marshmallow>=3.0.0a1,<4.0.0
+    marshmallow2: marshmallow>=2.15.2,<3.0.0
+    marshmallow3: marshmallow>=3.0.0rc2,<4.0.0
 commands = pytest {posargs}
 
 [testenv:lint]
