--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,12 +1,20 @@
 repos:
-- repo: https://github.com/asottile/add-trailing-comma
-  rev: v0.7.1
+- repo: https://github.com/asottile/pyupgrade
+  rev: v1.11.0
   hooks:
-  - id: add-trailing-comma
+  - id: pyupgrade
+    exclude: docopt.py
+- repo: https://github.com/ambv/black
+  rev: 18.9b0
+  hooks:
+  - id: black
+    language_version: python3.6
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v2.1.0
   hooks:
-  - id: trailing-whitespace
-  - id: double-quote-string-fixer
-  - id: end-of-file-fixer
   - id: flake8
+- repo: https://github.com/asottile/blacken-docs
+  rev: v0.3.0
+  hooks:
+  - id: blacken-docs
+    additional_dependencies: [black==18.9b0]
