--- a/setup.cfg
+++ b/setup.cfg
@@ -4,12 +4,8 @@
 # will need to generate wheels for each Python version that you support.
 universal=1
 
-# E127: continuation line over-indented for visual indent
-# E128: continuation line under-indented for visual indent
-# E265: block comment should start with #
-# E302: expected 2 blank lines, found 0
-# W504: line break after binary operator
 [flake8]
-ignore = E127,E128,E265,E302,W504
-max-line-length = 100
-exclude=.tox,.git,docs,tests,build,env,venv,.ropeproject
+ignore = E203, E266, E501, W503
+max-line-length = 80
+max-complexity = 18
+select = B,C,E,F,W,T4,B9
