Test against lowest dep versions

--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,7 @@
 envlist=
     lint
     py{27,35,36,37}-marshmallow{2,3}
+    py27-lowest
     docs
 
 [testenv]
@@ -9,6 +10,8 @@ extras = tests
 deps =
     marshmallow2: marshmallow>=2.15.2,<3.0.0
     marshmallow3: marshmallow>=3.0.0rc2,<4.0.0
+    lowest: marshmallow==2.0.0
+    lowest: sqlalchemy==0.9.7
 commands = pytest {posargs}
 
 [testenv:lint]
@@ -20,7 +23,6 @@ commands = pre-commit run --all-files
 deps = -rdocs/requirements.txt
 extras =
 commands = sphinx-build docs/ docs/_build {posargs}
-
 
 ; Below tasks are for development only (not run in CI)
 
