--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ jobs:
 
   - { python: '2.7', env: TOXENV=py27-marshmallow2 }
   - { python: '2.7', env: TOXENV=py27-marshmallow3 }
+  - { python: '2.7', env: TOXENV=py27-lowest }
 
   - { python: '3.5', env: TOXENV=py35-marshmallow2 }
   - { python: '3.5', env: TOXENV=py35-marshmallow3 }
