--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: python
+dist: xenial
 cache: pip
 install: travis_retry pip install -U tox
 script: tox
@@ -17,8 +18,8 @@ jobs:
   - { python: '3.6', env: TOXENV=py36-marshmallow2 }
   - { python: '3.6', env: TOXENV=py36-marshmallow3 }
 
-  - { python: '3.7', env: TOXENV=py37-marshmallow2, dist: xenial }
-  - { python: '3.7', env: TOXENV=py37-marshmallow3, dist: xenial }
+  - { python: '3.7', env: TOXENV=py37-marshmallow2 }
+  - { python: '3.7', env: TOXENV=py37-marshmallow3 }
 
   - { python: '3.6', env: TOXENV=docs }
 
