--- a/tox.ini
+++ b/tox.ini
@@ -21,18 +21,15 @@ skip_install = true
 commands = pre-commit run --all-files
 
 [testenv:docs]
-deps = -rdocs/requirements.txt
-extras =
+extras = docs
 commands = sphinx-build docs/ docs/_build {posargs}
 
 ; Below tasks are for development only (not run in CI)
 
 [testenv:watch-docs]
-deps =
-  -rdocs/requirements.txt
-  sphinx-autobuild
-extras =
-commands = sphinx-autobuild --open-browser docs/ docs/_build {posargs} -z marshmallow_sqlalchemy
+deps = sphinx-autobuild
+extras = docs
+commands = sphinx-autobuild --open-browser docs/ docs/_build {posargs} -z src/marshmallow_sqlalchemy -s 2
 
 [testenv:watch-readme]
 deps = restview
