--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist=
     lint
     py{27,35,36,37}-marshmallow2
     py{35,36,37}-marshmallow3
+    py37-marshmallowdev
     py27-lowest
     docs
 
@@ -11,6 +12,7 @@ extras = tests
 deps =
     marshmallow2: marshmallow>=2.15.2,<3.0.0
     marshmallow3: marshmallow>=3.0.0rc2,<4.0.0
+    marshmallowdev: https://github.com/marshmallow-code/marshmallow/archive/dev.tar.gz
     lowest: marshmallow==2.0.0
     lowest: sqlalchemy==0.9.7
 commands = pytest {posargs}
