--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ schedules:
   displayName: Daily midnight build
   branches:
     include:
-      - master
+      - dev
   always: "true"
 
 resources:
