--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ repos:
   rev: v1.23.0
   hooks:
   - id: pyupgrade
+    args: ["--py36-plus"]
 - repo: https://github.com/python/black
   rev: 19.3b0
   hooks:
