--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,17 @@
 [tox]
 envlist=
     lint
-    py{27,35,36,37}-marshmallow2
+    py{35,36,37}-marshmallow2
     py{35,36,37}-marshmallow3
     py37-marshmallowdev
-    py27-lowest
+    py36-lowest
     docs
 
 [testenv]
 extras = tests
 deps =
     marshmallow2: marshmallow>=2.15.2,<3.0.0
-    marshmallow3: marshmallow>=3.0.0rc2,<4.0.0
+    marshmallow3: marshmallow>=3.0.0,<4.0.0
     marshmallowdev: https://github.com/marshmallow-code/marshmallow/archive/dev.tar.gz
     lowest: marshmallow==2.0.0
     lowest: sqlalchemy==0.9.7
