--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 - repo: https://github.com/asottile/pyupgrade
-  rev: v1.25.1
+  rev: v1.26.0
   hooks:
   - id: pyupgrade
     args: ["--py36-plus"]
@@ -14,7 +14,7 @@ repos:
   hooks:
   - id: flake8
 - repo: https://github.com/asottile/blacken-docs
-  rev: v1.3.0
+  rev: v1.5.0-1
   hooks:
   - id: blacken-docs
     additional_dependencies: [black==19.10b0]
