--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@
 universal=1
 
 [flake8]
-ignore = E203, E266, E501, W503
-max-line-length = 80
+extend-ignore = E203, E266, E501, B902
+max-line-length = 90
 max-complexity = 18
 select = B,C,E,F,W,T4,B9
