Deprecate info={marshmallow: ...}

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,4 @@ filterwarnings =
     ignore:.*Binary.*:sqlalchemy.exc.SADeprecationWarning
     ignore:.*Decimal.*:sqlalchemy.exc.SAWarning
     ignore:.*TableSchema is deprecated.*:DeprecationWarning
+    ignore:.*Passing `info=*:DeprecationWarning
