--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,6 @@
 filterwarnings =
     ignore:.*Binary.*:sqlalchemy.exc.SADeprecationWarning
     ignore:.*Decimal.*:sqlalchemy.exc.SAWarning
+    ignore:.*TableSchema is deprecated.*:DeprecationWarning
+    ignore:.*ModelSchema is deprecated.*:DeprecationWarning
+    ignore:.*Passing `info=*:DeprecationWarning
