--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,16 @@
 [tox]
 envlist=
     lint
-    py{36,37,38}-marshmallow2
-    py{36,37,38}-marshmallow3
-    py38-marshmallowdev
+    py{36,37,38}-mastable
+    py38-madev
     py36-lowest
     docs
 
 [testenv]
 extras = tests
 deps =
-    marshmallow2: marshmallow>=2.15.2,<3.0.0
-    marshmallow3: marshmallow>=3.0.0,<4.0.0
-    marshmallowdev: https://github.com/marshmallow-code/marshmallow/archive/dev.tar.gz
+    mastable: marshmallow>=3.0.0,<4.0.0
+    madev: https://github.com/marshmallow-code/marshmallow/archive/dev.tar.gz
     lowest: marshmallow==2.15.2
     lowest: sqlalchemy==1.2.0
 commands = pytest {posargs}
