--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,16 @@
 [tox]
 envlist=
     lint
-    py{36,37,38}-mastable
-    py38-madev
+    py{36,37,38}-marshmallow3
+    py38-marshmallowdev
     py36-lowest
     docs
 
 [testenv]
 extras = tests
 deps =
-    mastable: marshmallow>=3.0.0,<4.0.0
-    madev: https://github.com/marshmallow-code/marshmallow/archive/dev.tar.gz
+    marshmallow3: marshmallow>=3.0.0,<4.0.0
+    marshmallowdev: https://github.com/marshmallow-code/marshmallow/archive/dev.tar.gz
     lowest: marshmallow==3.0.0
     lowest: sqlalchemy==1.2.0
 commands = pytest {posargs}
