Fix watch-docs tox environment
Committed via https://github.com/asottile/all-repos

--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ commands = sphinx-build docs/ docs/_build {posargs}
 [testenv:watch-docs]
 deps = sphinx-autobuild
 extras = docs
-commands = sphinx-autobuild --open-browser docs/ docs/_build {posargs} -z src/marshmallow_sqlalchemy -s 2
+commands = sphinx-autobuild --open-browser docs/ docs/_build {posargs} --watch src/marshmallow_sqlalchemy --delay 2
 
 [testenv:watch-readme]
 deps = restview
