--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,6 +31,7 @@ jobs:
         - py36-marshmallow3
         - py37-marshmallow3
         - py38-marshmallow3
+        - py39-marshmallow3
         - py38-marshmallowdev
 
         - docs
