--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include *.rst LICENSE
+include src/marshmallow_sqlalchemy/py.typed
 recursive-include tests *
 recursive-include docs *
 recursive-exclude docs *.pyc
