Update pre-commit and flake8 config

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,5 @@
 universal=1
 
 [flake8]
-extend-ignore = E203, E266, E501, B902
-max-line-length = 90
-max-complexity = 18
-select = B,C,E,F,W,T4,B9
+max-line-length = 88
+extend-ignore = E203, E501
