--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,21 +1,16 @@
 repos:
 - repo: https://github.com/asottile/pyupgrade
-  rev: v2.37.1
+  rev: v3.3.1
   hooks:
   - id: pyupgrade
     args: [--py37-plus]
-- repo: https://github.com/python/black
-  rev: 22.6.0
+- repo: https://github.com/psf/black
+  rev: 23.1.0
   hooks:
   - id: black
     language_version: python3
-- repo: https://gitlab.com/pycqa/flake8
-  rev: 3.9.2
+- repo: https://github.com/pycqa/flake8
+  rev: 6.0.0
   hooks:
   - id: flake8
-    additional_dependencies: [flake8-bugbear==22.7.1]
-- repo: https://github.com/asottile/blacken-docs
-  rev: v1.12.1
-  hooks:
-  - id: blacken-docs
-    additional_dependencies: [black==22.6.0]
+    additional_dependencies: [flake8-bugbear==23.1.14]
