--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/setup-python@v4.3.0
         with:
           python-version: '3.11'
-      - run: python -m pip install --upgrade pip wheel
+      - run: python -m pip install --upgrade pip
       - run: pip install tox
       - run: tox -elint
   tests:
@@ -30,10 +30,9 @@ jobs:
       - uses: actions/setup-python@v4.3.0
         with:
           python-version: ${{ matrix.python }}
-      - run: python -m pip install --upgrade pip wheel
-      - run: pip install tox codecov
+      - run: python -m pip install --upgrade pip
+      - run: pip install tox
       - run: tox -e${{ matrix.tox }}
-      - run: codecov
   release:
     needs: [lint, tests]
     name: PyPI release
