--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -3,17 +3,6 @@ on:
   push:
   pull_request:
 jobs:
-  lint:
-    name: lint
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3.1.0
-      - uses: actions/setup-python@v4.3.0
-        with:
-          python-version: '3.11'
-      - run: python -m pip install --upgrade pip
-      - run: pip install tox
-      - run: tox -elint
   tests:
     name: ${{ matrix.name }}
     runs-on: ubuntu-latest
@@ -31,17 +20,34 @@ jobs:
         with:
           python-version: ${{ matrix.python }}
       - run: python -m pip install --upgrade pip
-      - run: pip install tox
-      - run: tox -e${{ matrix.tox }}
+      - run: python -m pip install tox
+      - run: python -m tox -e${{ matrix.tox }}
+  # this duplicates pre-commit.ci, so only run it on tags
+  # it guarantees that linting is passing prior to a release
+  lint-pre-release:
+    name: lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3.1.0
+      - uses: actions/setup-python@v4.3.0
+        with:
+          python-version: '3.11'
+      - run: python -m pip install --upgrade pip
+      - run: python -m pip install tox
+      - run: python -m tox -elint
   release:
-    needs: [lint, tests]
+    needs: [tests, lint-pre-release]
     name: PyPI release
     if: startsWith(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3.1.0
       - uses: actions/setup-python@v4.3.0
-      - run: python -m pip install --upgrade pip wheel
-      - run: pip install twine
-      - run: python setup.py sdist bdist_wheel
-      - run: twine upload -u __token__ -p ${{ secrets.PYPI_API_TOKEN }} dist/*
+      - name: install requirements
+        run: python -m pip install build twine
+      - name: build dists
+        run: python -m build
+      - name: check package metadata
+        run: twine check dist/*
+      - name: publish
+        run: twine upload -u __token__ -p ${{ secrets.PYPI_API_TOKEN }} dist/*
