--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -10,10 +10,10 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - {name: '3.7', python: '3.7', tox: py37-marshmallow3}
-          - {name: '3.11', python: '3.11', tox: py311-marshmallow3}
-          - {name: 'lowest', python: '3.7', tox: py37-lowest}
-          - {name: 'dev', python: '3.11', tox: py311-marshmallowdev}
+          - { name: "3.8", python: "3.8", tox: py38-marshmallow3 }
+          - { name: "3.11", python: "3.11", tox: py311-marshmallow3 }
+          - { name: "lowest", python: "3.8", tox: py38-lowest }
+          - { name: "dev", python: "3.11", tox: py311-marshmallowdev }
     steps:
       - uses: actions/checkout@v3.1.0
       - uses: actions/setup-python@v4.3.0
@@ -31,7 +31,7 @@ jobs:
       - uses: actions/checkout@v3.1.0
       - uses: actions/setup-python@v4.3.0
         with:
-          python-version: '3.11'
+          python-version: "3.11"
       - run: python -m pip install --upgrade pip
       - run: python -m pip install tox
       - run: python -m tox -elint
