--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,11 @@
-[bdist_wheel]
-# This flag says that the code is written to work on both Python 2 and Python
-# 3. If at all possible, it is good practice to do this. If you cannot, you
-# will need to generate wheels for each Python version that you support.
-universal=1
+[metadata]
+license_files = LICENSE
 
 [flake8]
-max-line-length = 88
-extend-ignore = E203, E501
+max-line-length = 90
+max-complexity = 18
+extend-ignore = E203, E266, E501, E731, B903
+
+[tool:pytest]
+norecursedirs = .git .ropeproject .tox docs env venv tests/mypy_test_cases
+addopts = -v --tb=short
