--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -1,6 +1,8 @@
 name: build
 on:
   push:
+    branches: ["dev"]
+    tags: ["*"]
   pull_request:
 jobs:
   tests:
@@ -26,6 +28,7 @@ jobs:
   # it guarantees that linting is passing prior to a release
   lint-pre-release:
     name: lint
+    if: startsWith(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3.1.0
