--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,60 @@
-[tool.black]
-line-length = 88
-target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
+[project]
+name = "marshmallow-sqlalchemy"
+version = "0.30.0"
+description = "SQLAlchemy integration with the marshmallow (de)serialization library"
+readme = "README.rst"
+license = { file = "LICENSE" }
+maintainers = [{ name = "Steven Loria", email = "sloria1@gmail.com" }]
+classifiers = [
+  "Intended Audience :: Developers",
+  "License :: OSI Approved :: MIT License",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.8",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+]
+requires-python = ">=3.8"
+dependencies = [
+  "marshmallow>=3.0.0",
+  "SQLAlchemy>=1.4.40,<3.0",
+  "packaging>=21.3",
+]
+
+[project.urls]
+Changelog = "https://marshmallow-sqlalchemy.readthedocs.io/en/latest/changelog.html"
+Funding = "https://opencollective.com/marshmallow"
+Issues = "https://github.com/marshmallow-code/marshmallow-sqlalchemy/issues"
+Source = "https://github.com/marshmallow-code/marshmallow-sqlalchemy"
+
+[project.optional-dependencies]
+docs = ["sphinx==7.2.6", "alabaster==0.7.16", "sphinx-issues==3.0.1"]
+# TODO: Remove pytest pin when https://github.com/TvoroG/pytest-lazy-fixture/issues/65 is resolved
+tests = ["pytest<8", "pytest-lazy-fixture>=0.6.2"]
+dev = ["marshmallow-sqlalchemy[tests]", "tox", "pre-commit~=3.5"]
+
+[build-system]
+requires = ["flit_core<4"]
+build-backend = "flit_core.buildapi"
+
+[tool.flit.sdist]
+include = ["docs/", "tests/", "CHANGELOG.rst", "CONTRIBUTING.rst", "tox.ini"]
+exclude = ["docs/_build/"]
+
+[tool.ruff]
+src = ["src"]
+fix = true
+show-fixes = true
+show-source = true
+
+[tool.ruff.lint]
+ignore = ["E203", "E266", "E501", "E731"]
+select = [
+  "B",  # flake8-bugbear
+  "E",  # pycodestyle error
+  "F",  # pyflakes
+  "I",  # isort
+  "UP", # pyupgrade
+  "W",  # pycodestyle warning
+]
