--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,11 +16,7 @@ classifiers = [
   "Programming Language :: Python :: 3.12",
 ]
 requires-python = ">=3.8"
-dependencies = [
-  "marshmallow>=3.0.0",
-  "SQLAlchemy>=1.4.40,<3.0",
-  "packaging>=21.3",
-]
+dependencies = ["marshmallow>=3.10.0", "SQLAlchemy>=1.4.40,<3.0"]
 
 [project.urls]
 Changelog = "https://marshmallow-sqlalchemy.readthedocs.io/en/latest/changelog.html"
